--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -508,7 +508,8 @@
 								</div>
 
 								<div style="margin-right: 20px; width: 100%;">
-									<label style="cursor: pointer;">@SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).Nombre</label>
+									<label style="cursor: pointer;">@SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).Nombre</label><br/>
+									<label style="font-size: 13px; cursor: pointer;">@Calculadora.DiferenciaTiempo(suscripcion2.FechaTermina, idioma, 1)</label>
 								</div>
 							</div>
 						</a>
