--- a/pepeizqs deals web/Pages/HistoricalLow.cshtml
+++ b/pepeizqs deals web/Pages/HistoricalLow.cshtml
@@ -6,14 +6,6 @@
 
 	ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "HistoricalLow.Title");
 	Layout = "/Pages/Shared/_Layout.cshtml";
-
-	string enlaceBase = Url.RouteUrl(ViewContext.RouteData.Values);
-	string enlaceArgumentos = ViewContext.HttpContext.Request.QueryString.Value;
-	string enlaceFinal = $"{enlaceBase}{enlaceArgumentos}";
-
-	enlaceFinal = enlaceFinal.Replace("https://pepeizqdeals.com/", null);
-	enlaceFinal = enlaceFinal.Replace("https://beta.pepeizqdeals.com/", null);
-	enlaceFinal = enlaceFinal.Replace("https://pepeizq-001-site2.ftempurl.com", null);
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma, dominio = HttpContext.Request.Host.Value, modo = @Model.modo, enlace = @enlaceFinal }))
+@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma}))
