--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -1,12 +1,15 @@
-﻿@using BaseDatos.Juegos;
+﻿@using APIs.Steam
+@using BaseDatos.Juegos;
 @using Juegos;
 @using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.Data.SqlClient;
+@using Microsoft.JSInterop
 @using pepeizqs_deals_web.Areas.Identity.Data;
 
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
+@inject IJSRuntime JavaScript
 
 @if (juegosMostrar.Count > 0)
 {
@@ -33,10 +36,14 @@
 				
 				@if (minimo >= 50)
 				{
-					<a @onclick="ClickearAtras" class="boton-pequeño" href="@enlace#top" target="_top" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px;"><i class="fa-solid fa-chevron-left"></i></a>
+					<a @onclick="ClickearAtras" class="boton-pequeño" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px; cursor: pointer;">
+						<i class="fa-solid fa-chevron-left"></i>
+					</a>
 				}
 
-				<a @onclick="ClickearAdelante" class="boton-pequeño" href="@enlace#top" target="_top" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px;"><i class="fa-solid fa-chevron-right"></i></a>
+				<a @onclick="ClickearAdelante" class="boton-pequeño" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px; cursor: pointer;">
+					<i class="fa-solid fa-chevron-right"></i>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -46,72 +53,134 @@
 	<div>
 		@foreach (var juego in juegosMostrar)
 		{
-			<div class="perfil-flexible-centrado" style="margin-top: 25px; margin-bottom: 25px;">
-				<a class="boton-pequeño" style="padding: 0px;" href="@CargarEnlace(juego)" target="_blank">
-					<div class="perfil-flexible-centrado">
-						<div>
-							<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
-						</div>
+			<div style="margin-top: 25px; margin-bottom: 25px;">
+				@{
+					bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego, juego.PrecioMinimosHistoricos[0].DRM);
+					bool usuarioTieneDeseado = false;
 
-						<div style="padding: 5px 20px; text-align: left; width: 65%;">
-							<div>@juego.Nombre</div>
+					string fondoColor = string.Empty;
 
-							<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
-								<img src="@CargarImagenDRM(juego)" style="width: 20px; height: 20px;" />
+					if (usuarioTieneJuego == true)
+					{
+						fondoColor = "background-color: var(--fondoBien);";
+					}
+					else
+					{
+						usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego, juego.PrecioMinimosHistoricos[0].DRM, true);
 
-								@if (juego.Analisis != null)
+						if (usuarioTieneDeseado == true)
+						{
+							fondoColor = "background-color: var(--fondoAlerta);";
+						}
+					}
+
+					bool usuarioConectado = false;
+
+					if (usuario != null)
+					{
+						usuarioConectado = true;
+					}
+
+					Herramientas.ToolTipDatos tooltipDatos = Herramientas.Tooltip.Generar(idioma, juego, juego.PrecioMinimosHistoricos[0].DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado);
+
+					<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.IdMaestra.ToString()')">
+						<div id="tooltip-@juego.IdMaestra.ToString()" class="tooltip-relleno">
+							@if (string.IsNullOrEmpty(tooltipDatos.Video) == false)
+							{
+								<video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
+							}
+
+							<div style="padding: 15px; text-align: center;">
+								<div style="text-align: center;">
+									@tooltipDatos.Nombre
+								</div>
+
+								@if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
 								{
-									if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
-									{
-										if (int.Parse(@juego.Analisis.Porcentaje) > 74)
-										{
-											<img src="/imagenes/analisis/positive.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
-										}
-
-										if (int.Parse(@juego.Analisis.Porcentaje) > 49 && int.Parse(@juego.Analisis.Porcentaje) < 75)
-										{
-											<img src="/imagenes/analisis/mixed.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
-										}
-
-										if (int.Parse(@juego.Analisis.Porcentaje) < 50)
-										{
-											<img src="/imagenes/analisis/negative.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
-										}
-									}
+									<div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
+										<img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" />
+										<label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
+									</div>
 								}
 
-								<div style="margin-left: 20px; font-size: 13px;">@CargarDetectado(juego)</div>
-
-								@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
+								@if (string.IsNullOrEmpty(tooltipDatos.UsuarioMensaje) == false)
 								{
-									<div style="margin-left: 20px; font-size: 13px;">@juego.IdMaestra</div>
-
-									@if (juego.Analisis != null)
-									{
-										if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
-										{
-											<div style="margin-left: 20px; font-size: 13px;">@int.Parse(juego.Analisis.Cantidad.Replace(",", null))</div>
-										}
-									}									
+									<div style="text-align: center;">
+										@tooltipDatos.UsuarioMensaje
+									</div>
 								}
-							</div>						
-						</div>
-
-						<div style="width: 35%; display: flex; align-items: center; justify-content: center; text-align: center;">
-							<div style="width: 30%;">
-								<img src="@CargarImagenTienda(juego)" style="width: 100%;"/>
-							</div>
-
-							<div style="padding: 10px 15px; margin: 0px 30px 0px 40px;" class="juego-descuento">
-								@CargarDescuento(juego)
-							</div>
-
-							<div style="font-size: 18px;">
-								@CargarPrecio(juego)
 							</div>
 						</div>
+
+						<a class="boton-pequeño" style="padding: 0px; @fondoColor" href="@CargarEnlace(juego)" target="_blank">
+							<div class="perfil-flexible-centrado">
+								<div>
+									<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
+								</div>
+
+								<div style="padding: 5px 20px; text-align: left; width: 65%;">
+									<div>@juego.Nombre</div>
+
+									<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
+										<img src="@CargarImagenDRM(juego)" style="width: 20px; height: 20px;" />
+
+										@if (juego.Analisis != null)
+										{
+											if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
+											{
+												if (int.Parse(@juego.Analisis.Porcentaje) > 74)
+												{
+													<img src="/imagenes/analisis/positive.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
+												}
+
+												if (int.Parse(@juego.Analisis.Porcentaje) > 49 && int.Parse(@juego.Analisis.Porcentaje) < 75)
+												{
+													<img src="/imagenes/analisis/mixed.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
+												}
+
+												if (int.Parse(@juego.Analisis.Porcentaje) < 50)
+												{
+													<img src="/imagenes/analisis/negative.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
+												}
+											}
+										}
+
+										<div style="margin-left: 20px; font-size: 13px;">@CargarDetectado(juego)</div>
+
+										@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
+										{
+											<div style="margin-left: 20px; font-size: 13px;">@juego.IdMaestra</div>
+
+											<div style="margin-left: 20px; font-size: 13px;">@juego.IdSteam</div>
+
+											@if (juego.Analisis != null)
+											{
+												if (string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
+												{
+													<div style="margin-left: 20px; font-size: 13px;">@int.Parse(juego.Analisis.Cantidad.Replace(",", null))</div>
+												}
+											}
+										}
+									</div>
+								</div>
+
+								<div style="width: 35%; display: flex; align-items: center; justify-content: center; text-align: center;">
+									<div style="width: 30%;">
+										<img src="@CargarImagenTienda(juego)" style="width: 100%;" />
+									</div>
+
+									<div style="padding: 10px 15px; margin: 0px 30px 0px 40px;" class="juego-descuento">
+										@CargarDescuento(juego)
+									</div>
+
+									<div style="font-size: 18px;">
+										@CargarPrecio(juego)
+									</div>
+								</div>
+							</div>
+						</a>
 					</div>
-				</a>
+				}
 			</div>
 		}
 	</div>
@@ -125,22 +194,56 @@
 	public string idioma { get; set; }
 
 	[Parameter]
-	public string dominio { get; set; }
-
-	[Parameter]
-	public string enlace { get; set; }
-
-	[Parameter]
 	public string modo { get; set; }
 
 	private List<global::Juegos.Juego> juegosConMinimos = new List<global::Juegos.Juego>();
 	private List<global::Juegos.Juego> juegosMostrar = new List<global::Juegos.Juego>();
+
+	private Usuario usuario = new Usuario();
+	private List<string> juegosUsuario = new List<string>();
 
 	private int minimo = 0;
 	private int maximo = 0;
 
 	protected override async Task OnInitializedAsync()
 	{
+		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
+
+		if (usuario != null)
+		{
+			if (string.IsNullOrEmpty(usuario.SteamAccount) == false && string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
+			{
+				bool tiempo = true;
+
+				if (string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
+				{
+					if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromDays(7) > DateTime.Now)
+					{
+						tiempo = false;
+					}
+				}
+
+				if (tiempo == true)
+				{
+					SteamUsuario datos = await Cuenta.CargarDatos(usuario.SteamAccount);
+
+					usuario.SteamGames = datos.Juegos;
+					usuario.SteamWishlist = datos.Deseados;
+					usuario.Avatar = datos.Avatar;
+					usuario.Nickname = datos.Nombre;
+					usuario.SteamAccountLastCheck = DateTime.Now.ToString();
+					usuario.OfficialGroup = datos.GrupoPremium;
+					usuario.OfficialGroup2 = datos.GrupoNormal;
+
+					await UserManager.UpdateAsync(usuario);
+				}
+			}
+
+			juegosUsuario = Herramientas.Listados.Generar(usuario.SteamGames);
+		}
+
+		//--------------------------------------------------------------------
+
 		minimo = 0;
 		maximo = 50;
 
@@ -153,11 +256,6 @@
 
 		if (juegosConMinimos.Count > 0)
 		{
-			foreach (var juego in juegosConMinimos)
-			{
-				juego.Imagenes.Capsule_231x87 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.IdMaestra.ToString(), "capsule_231x87", dominio);
-			}
-
 			if (modo == "last")
 			{
 				OrdenarUltimosAñadidos();
@@ -177,7 +275,7 @@
 		{
 			if (juegosConMinimos.Count > 0)
 			{
-				juegosMostrar.Clear();	
+				juegosMostrar = new List<Juegos.Juego>();
 
 				for (int i = minimo2; i < maximo2; i += 1)
 				{
@@ -187,7 +285,7 @@
 		}
 	}
 
-	private void ClickearAdelante()
+	private async void ClickearAdelante()
 	{
 		if (minimo + 50 <= juegosConMinimos.Count && maximo + 50 <= juegosConMinimos.Count)
 		{
@@ -196,9 +294,11 @@
 		}
 
 		CargarJuegos(minimo, maximo);
+
+		await JavaScript.InvokeVoidAsync("moverScroll", "cuerpazo");
 	}
 
-	private void ClickearAtras()
+	private async void ClickearAtras()
 	{
 		if (minimo - 50 >= 0 && maximo - 50 >= 0)
 		{
@@ -207,6 +307,8 @@
 		}
 
 		CargarJuegos(minimo, maximo);
+
+		await JavaScript.InvokeVoidAsync("moverScroll", "cuerpazo");
 	}
 
 	private string CargarImagenDRM(global::Juegos.Juego juego)
